src/app/views/home/home.component.scss
@import '../../styles/variables';

.home-header {
  background: linear-gradient($color-cerise-600, $color-primary-cerise);
  text-align: center;
  padding: 3em;
  color: $white;

  h1 {
    color: $white;
    text-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
  }

  a:first-of-type {
    margin-bottom: 0.5em;
  }

  .home-header-button-container {
    display: inline-block;
    margin-top: 1.5em;

    .medium-button-light-size {
      width: 100%;
      position: relative;
      left: -1em;
    }
  }
}

.start-sign-in-button {
  width: calc(100% - 30px);
}

.my-jobs {
  background: $white;
}

.my-jobs-title {
  color: $color-secondary-gray;
}

.my-jobs-show-all-button {
  display: flex;
  flex-direction: column-reverse;

  span {
    cursor: pointer;
    color: $color-primary-cerise;
    align-self: flex-end;
    padding-left: 3em;
  }
}

.user-jobs {
  background: $color-secondary-gray;
}

.user-jobs-title {
  color: $white;
}

.user-jobs-show-all-button {
  display: flex;
  flex-direction: column-reverse;

  span {
    cursor: pointer;
    color: $white;
    align-self: flex-end;
    padding-left: 3em;
  }
}

.home-slider-container {
  padding: 3em;

  @media screen and (max-width: $md-device-width) {
    padding: 3em 1em;

    .title {
      padding-left: 3em;
    }
  }

  > div {
    padding: 0;
  }

  .jobs-slider {
    margin-top: 1em;
    overflow-y: scroll;
    white-space: nowrap;

    &::-webkit-scrollbar {
      display: none;
    }

    .item-container {
      display: inline-block;
      width: 180px;
      margin: 5px;
      background-color: $default-bg-color;
      border-radius: $job-card-border-radius;
      box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.4);
      cursor: pointer;

      &:hover {
        transform: scale(1.02);
      }

      .job-name {
        height: 110px;
        padding: 10px;
        display: flex;
        flex-direction: column;
        justify-content: center;

        p {
          text-align: center;
        }
      }

      .jobs-salary-container {
        color: $white;
        background: $color-primary-cerise;
        padding: 10px;
        font-weight: 500;
        /* TODO: Jobs border radius variable */

        border-radius: 0 0 $job-card-border-radius $job-card-border-radius;
        text-align: center;
      }

      .user-jobs-salary-container-active {
        background: $color-primary-cerise;
        color: $white;
      }

      .user-jobs-salary-container-inactive {
        background: $color-gray-50;
        color: $color-gray-200;
      }
    }

    @media (max-width: $md-device-width) {

      .item-container:first-of-type {
        margin-left: 3em;
      }
      .item-container:last-of-type {
        margin-right: 3em;
      }
    }
  }
}

.instructions-container {
  padding: 4em 4em 8em 4em;
  text-align: center;
  color: $white;
  background: $color-secondary-blue;
  position: relative;

  &:nth-of-type(2) {
    background: $color-secondary-gray;
  }

  .btn {
    width: calc(100% - 8em);
    margin: 4em;
    position: absolute;
    left: 0;
    bottom: 0;;
  }

  .list {
    list-style: none;
    margin: 0 auto;
    padding: 0;
    text-align: left;

    .item {
      padding: 10px 0 10px 45px;
      position: relative;

      .fa {
        position: absolute;
        left: 0;
        top: 5px;
      }
    }
  }
}

.home-jobs-applied-for-header-wrapper {
  background: $color-gray-25;
  border-bottom: 2px solid $color-primary-cerise;
}

.home-jobs-applied-for-header {
  h3 {
    margin-top: 15px;
    margin-bottom: 15px;
  }
}

.home-jobs-applied-for-job-item-wrapper {
  border-top: 1px solid $color-gray-25;
  border-bottom: 1px solid $color-gray-25;
}

.home-jobs-applied-for-job-item {

  cursor: pointer;

  p {
    margin-top: 15px;
    margin-bottom: 15px;
    padding-left: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  span {
    color: $color-primary-cerise;
    margin-top: 15px;
    margin-bottom: 15px;
    padding-left: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

.home-partners {
  text-align: center;
  background: $white;
  padding: 5em 2em;

  .partners-logos-container {
    width: 100%;
  }

  h2 {
    width: 100%;
  }

  .logo-container {
    padding: 15px 5px;
    display: inline-block;
    vertical-align: middle;
    text-align: center;

    .partner-logo {
      width: auto;
      max-height: 80px;
      max-width: 130px;
      filter: grayscale(100%);

      &.extra-padding {
        padding-top: 5%;
      }
      &.left-padding {
        padding-left: 10%;
      }
    }
  }
}

